# exercises

./: .gitignore  README.md
Design-Pattern/: .clang-format  .clang-tidy  .cmake-format  CMakeLists.txt  cppcheck-suppress.txt
Design-Pattern/app/: CMakeLists.txt  logger_app.cpp
Design-Pattern/include/design_pattern/: log.hpp
Design-Pattern/src/: CMakeLists.txt  log.cpp
Design-Pattern/test/: CMakeLists.txt  main.cpp  utest_log.cpp
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
oop/: CMakeLists.txt
oop/cmake/: AddTestWithLibraries.cmake  MacroOutOfSourceBuild.cmake
oop/observer/: CMakeLists.txt
oop/observer/classic/: CMakeLists.txt  main.cpp  observer.hpp  person_observer.cpp  person_observer.hpp  person_subject.cpp  person_subject.hpp  subject.cpp  subject.hpp
oop/observer/oo/: CMakeLists.txt  address_observer.cpp  address_observer.hpp  main.cpp  name_observer.cpp  name_observer.hpp  observer.hpp  person.cpp  person.hpp
oop/observer/value/: CMakeLists.txt  main.cpp  observer.hpp
oop/visitor/: CMakeLists.txt
oop/visitor/app/: main.cpp
oop/visitor/enum/: CMakeLists.txt  circle.cpp  circle.hpp  main.cpp  shape.cpp  shape.hpp  square.cpp  square.hpp
oop/visitor/variant/: CMakeLists.txt  circle.cpp  circle.hpp  draw.hpp  main.cpp  shape.hpp  square.cpp  square.hpp  translate.hpp
